@@ -95,6 +95,8 @@ message_invalid_next=[color=red]Invalid next value: [/color]
 message_invalid_initial_preset=[color=red]Milestones failed to load the initial preset from Mod Settings and will fall back to auto-detection. Error was:[/color]
 message_migration_130_groups=[img=milestones_main_icon_white] Milestones 1.3.0 now supports grouping milestones in categories, but your existing list will not be modified.\nReload your preset in the settings (__CONTROL__milestones_toggle_gui__) if you want to use groups.
 
+fluidic_power_tooltip=Generate __1__ of electric energy.
+
 [milestones.commands]
 debug-print-forces=- Print the mod's internal global table, for debugging purposes.
 debug-print-loaded-milestones=- Print the json of loaded milestones. Same as the "export" string available in settings.
