@@ -2,6 +2,7 @@
 Version: 1.3.9
 Date: ????
   Changes:
+    - Add preset addons for Fluidic Power (Thanks to stringweasel)
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.8
 Date: 2022-09-13
